--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-fixed-top">
             <nav class="navbar-inner">
                 <section class="container navegacao-topo">
-                    <a class="brand">MAURILIO - MsobEAD - UNYLEYA - Engenharia DevOps</a>
+                    <a class="brand">MAURILIO - MsoasdbEAD - UNYLEYA - Engenharia DevOps</a>
                     <ul class="nav">
                         <li class="active"><a href="#"><i class="icon-home" data-bind="click:openTestList"></i></a></li>
                     </ul>
@@ -38,7 +38,7 @@
                 <article class="row">
                     <div class="span2"></div>
                     <div class="span8 pagination-centered ">
-                        <p style="text-align: center;">Select your test!</p>
+                        <p style="text-align: center;">Select ysour test!</p>
                         <ul data-bind="foreach: Tests">
                             <li class="media well well-small itemLista" data-bind="click:$parent.selectTest"><a href="#" data-bind="text:Exam"></a></li>
                         </ul>
