--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <article class="row">
                     <div class="span2"></div>
                     <div class="span8 pagination-centered ">
-                        <p style="text-align: center;">Select ay,retmrbwvwrevc test!</p>
+                        <p style="text-align: center;">Select ay,asdadasdasdasdad test!</p>
                         <ul data-bind="foreach: Tests">
                             <li class="media well well-small itemLista" data-bind="click:$parent.selectTest"><a href="#" data-bind="text:Exam"></a></li>
                         </ul>
